# pybirt

./: README.md  pyproject.toml
pybirt/: __init__.py  __main__.py  report_parameters.py
tests/: test_pybirt.py  test_report_parameters.py
