[tool.poetry]
name = "pybirt"
version = "0.1.0"
description = ""
authors = ["yatmanov <yatmanov@megaputer.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
